# polymarket

./: .env  .gitignore  Cargo.toml  rust_out
deploy/: deploy.sh  pull-xframes.sh  start.sh
errors/html/: btc-updown-5m-1775950800.html
lib/xframe-features/: Cargo.toml
lib/xframe-features-derive/: Cargo.toml
lib/xframe-features-derive/src/: lib.rs
lib/xframe-features/src/: lib.rs
lib/xgb/: .gitignore  Cargo.toml  README.md
lib/xgb/.github/workflows/: linux.yml  linux_arm64.yml  macos.yml  windows.yml
lib/xgb/examples/basic/: Cargo.toml
lib/xgb/examples/basic/src/: main.rs
lib/xgb/examples/custom_objective/: Cargo.toml
lib/xgb/examples/custom_objective/src/: main.rs
lib/xgb/examples/generalised_linear_model/: Cargo.toml
lib/xgb/examples/generalised_linear_model/src/: main.rs
lib/xgb/examples/multiclass_classification/: Cargo.toml
lib/xgb/examples/multiclass_classification/src/: main.rs
lib/xgb/src/: booster.rs  dmatrix.rs  error.rs  lib.rs
lib/xgb/src/parameters/: booster.rs  dart.rs  learning.rs  linear.rs  mod.rs  tree.rs
lib/xgb/xgboost-sys/: Cargo.toml  README.md  build.rs
lib/xgb/xgboost-sys/lib/: README.md
lib/xgb/xgboost-sys/lib/win_amd64/: xgboost.lib
src/: account.rs  api_data_manager.rs  btc_updown_sibling.rs  btcusdt_ws.rs  constants.rs  currency_updown_sibling.rs  currency_ws.rs  data_ws.rs  gamma_question.rs  history_sim.rs  main.rs  market_snapshot.rs  migration.rs  poly_trace.rs  project_manager.rs  real_sim.rs  run_log.rs  tee_log.rs  trade_csv_log.rs  train_mode.rs  util.rs  ws.rs  ws_parser.rs  xframe.rs  xframe_dump.rs
