[package]
name = "xgb"
version = "3.0.5"
authors = ["Dave Challis <dave@suicas.net>", "Marco Mengelkoch"]
license = "MIT"
repository = "https://github.com/marcomq/rust-xgboost"
homepage = "https://github.com/marcomq/rust-xgboost"
description = "Machine learning using XGBoost"
documentation = "https://docs.rs/xgboost_lib"
readme = "README.md"
edition = "2021"

[dependencies]
xgboost-sys = { package = "xgboost_lib-sys", path = "xgboost-sys", version = "3.0.4" }
libc = "0.2"
derive_builder = "0.20"
log = "0.4"
tempfile = "3.15"
indexmap = "2.7"

[features]
use_prebuilt_xgb = ["xgboost-sys/use_prebuilt_xgb"]
local_build = ["xgboost-sys/local_build"]
cuda = ["xgboost-sys/cuda"]
default  = ["use_prebuilt_xgb"]
